force-app/main/default/objects/Opportunity/fields/Assumed_Level__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Level__c</fullName>
    <label>Assumed Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>