force-app/main/default/objects/Opportunity/fields/Skill_Needed__c.field-meta.xml
<CustomField>
    <fullName>Skill_Needed__c</fullName>
    <label>Skill Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Integration</fullName>
            </value>
            <value>
                <fullName>Cloud Migration</fullName>
            </value>
            <value>
                <fullName>Data Cloud Integration Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>