force-app/main/default/objects/Opportunity/fields/Start_Needed__c.field-meta.xml
<CustomField>
    <fullName>Start_Needed__c</fullName>
    <label>Start Needed</label>
    <type>Date</type>
</CustomField>